--- a/web/html/index.html
+++ b/web/html/index.html
@@ -1,7 +1,24 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US" prefix="og: https://ogp.me/ns">
+<head>
     <title>WebSSH Client</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="HandheldFriendly" content="true"/>
+    <meta name="MobileOptimized" content="320"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0"/>
+    <meta name="title" content="WebSSH Client">
+    <meta name="language" content="en"/>
+    <meta name="document-type" content="Public"/>
+    <meta name="theme-color" content="#1f9cbd"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1f9cbd">
+    <meta name="msapplication-navbutton-color" content="#1f9cbd">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="copyright" content="2019-2024"/>
+    <meta name="keywords" content="sshEasy, WebSSH Client, WebSSH, SSH"/>
+    <meta name="description" content="SSH to your machine from anywhere with the SSH client running directly in your browser"/>
+    <meta name="robots" content="all"/>
 
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
